push view order-admin

--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -42,6 +42,12 @@
 						<span>Authorities</span>
 					</a>
 				</li>
+				<li>
+					<a href="#!order" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Order</span>
+					</a>
+				</li>
 			</ul>
 		</div>
 		<div class="clearfix"></div>
