--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -52,6 +52,7 @@
     <script src="/assetss/ctrl/product-ctrl.js"></script>
     <script src="/assetss/ctrl/category-ctrl.js"></script>
     <script src="/assetss/ctrl/authority-ctrl.js"></script>
+    <script src="/assetss/ctrl/order-ctrl.js"></script>
 
 </body>
 
