--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -24,6 +24,44 @@
 						<span>Products</span>
 					</a>
 				</li>
+<!--				Bd-->
+				<li>
+					<a href="#!color" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Màu sắc</span>
+					</a>
+				</li>
+				<li>
+					<a href="#!kichco" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Kích cỡ</span>
+					</a>
+				</li>
+				<li>
+					<a href="#!chatlieu" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Chất liệu</span>
+					</a>
+				</li>
+				<li>
+					<a href="#!coao" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Cổ áo</span>
+					</a>
+				</li>
+				<li>
+					<a href="#!thuonghieu" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Thương hiệu</span>
+					</a>
+				</li>
+				<li>
+					<a href="#!loaikhachhang" class="waves-effect">
+						<i class="dripicons-to-do"></i>
+						<span>Loại khách hàng</span>
+					</a>
+				</li>
+<!--				Kt-->
 				<li>
 					<a href="#!category" class="waves-effect">
 						<i class="dripicons-to-do"></i>
