--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -21,14 +21,14 @@
         <div class="content-page">
             <div class="content">
                 <div ng-include="'/admin/_topbar.html'"></div>
-                <div class="ng-view"></div>
+                <div class="ng-view">
+                </div>
             </div>
             <footer class="footer">
                 Copyright © 2022 <b>Julie</b>. All rights reserved.
             </footer>
         </div>
     </div>
-
     <script src="/assetss/js/jquery.min.js"></script>
     <script src="/assetss/js/popper.min.js"></script>
     <script src="/assetss/js/bootstrap.min.js"></script>
@@ -54,6 +54,12 @@
     <script src="/assetss/ctrl/authority-ctrl.js"></script>
     <script src="/assetss/ctrl/order-ctrl.js"></script>
 
+    <script src="/assetss/ctrl/ctrlPhu/colors-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/kichco-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/chatlieu-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/coao-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/loaikhachhang-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/thuonghieu-ctrl.js"></script>
 </body>
 
 </html>
