--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -63,9 +63,9 @@
 				</li>
 <!--				Kt-->
 				<li>
-					<a href="#!category" class="waves-effect">
+					<a href="#!sanpham" class="waves-effect">
 						<i class="dripicons-to-do"></i>
-						<span>Categories</span>
+						<span>Sản phẩm</span>
 					</a>
 				</li>
 				<li>
