--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <footer class="footer">
-                Copyright © 2022 <b>Julie</b>. All rights reserved.
+<!--                Copyright © 2022 <b>Julie</b>. All rights reserved.-->
             </footer>
         </div>
     </div>
