--- a/src/main/resources/static/admin/phu/color/_form.html
+++ b/src/main/resources/static/admin/phu/color/_form.html
@@ -11,12 +11,12 @@
         <form class="form p-3">
             <div class="form-group row">
                 <label class="form-label">Code</label>
-                <input type="text" class="form-control" ng-model="form.code" placeholder="Enter code">
+                <input type="color" class="form-control" ng-model="form.code" placeholder="Enter code">
             </div>
             <div class="form-group row">
                 <label class="form-label">Name</label>
                 <div class="input-group">
-                    <input type="color" class="form-control" ng-model="form.name" placeholder="Enter name">
+                    <input type="text" class="form-control" ng-model="form.name" placeholder="Enter name">
                 </div>
             </div>
             <div class="form-group row">
