--- a/src/main/resources/static/admin/phu/diachi/index.html
+++ b/src/main/resources/static/admin/phu/diachi/index.html
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js" integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <div class="page-content-wrapper">
     <div class="container-fluid">
         <div class="row">
@@ -8,10 +10,10 @@
                             <li class="breadcrumb-item">
                                 <a href="#">Julie</a>
                             </li>
-                            <li class="breadcrumb-item active">Thương hiệu</li>
+                            <li class="breadcrumb-item active">Địa chỉ</li>
                         </ol>
                     </div>
-                    <h4 class="page-title">Thương hiệu</h4>
+                    <h4 class="page-title">Địa chỉ</h4>
                 </div>
             </div>
         </div>
@@ -25,10 +27,10 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade" id="edit" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_form.html'"></div>
+                <div ng-include="'/admin/phu/diachi/_form.html'"></div>
             </div>
             <div class="tab-pane fade show active" id="list" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_table.html'"></div>
+                <div ng-include="'/admin/phu/diachi/_table.html'"></div>
             </div>
         </div>
     </div>
