--- a/src/main/resources/static/admin/phu/magiamgia/index.html
+++ b/src/main/resources/static/admin/phu/magiamgia/index.html
@@ -8,10 +8,10 @@
                             <li class="breadcrumb-item">
                                 <a href="#">Julie</a>
                             </li>
-                            <li class="breadcrumb-item active">Thương hiệu</li>
+                            <li class="breadcrumb-item active">Mã giảm giá</li>
                         </ol>
                     </div>
-                    <h4 class="page-title">Thương hiệu</h4>
+                    <h4 class="page-title">Mã giảm giá</h4>
                 </div>
             </div>
         </div>
@@ -25,10 +25,10 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <div class="tab-pane fade" id="edit" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_form.html'"></div>
+                <div ng-include="'/admin/phu/magiamgia/_form.html'"></div>
             </div>
             <div class="tab-pane fade show active" id="list" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_table.html'"></div>
+                <div ng-include="'/admin/phu/magiamgia/_table.html'"></div>
             </div>
         </div>
     </div>
