--- a/src/main/resources/static/admin/phu/chatlieu/_table.html
+++ b/src/main/resources/static/admin/phu/chatlieu/_table.html
@@ -22,7 +22,8 @@
                     <div class="btn-group btn-group-xs">
                         <button ng-click="edit(item)" class="btn btn-icon">
                             <i class="fa fa-xs fa-pen"></i>
-                        </button>
+                        </button >
+                        <button ng-click="delete(item)" class="btn btn-danger">
                             <i class="fa fa-xs fa-times"></i>
                         </button>
                     </div>
