--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -60,6 +60,8 @@
     <script src="/assetss/ctrl/ctrlPhu/coao-ctrl.js"></script>
     <script src="/assetss/ctrl/ctrlPhu/loaikhachhang-ctrl.js"></script>
     <script src="/assetss/ctrl/ctrlPhu/thuonghieu-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/diachi-ctrl.js"></script>
+    <script src="/assetss/ctrl/ctrlPhu/magiamgia-ctrl.js"></script>
     <script src="/assetss/ctrl/sanpham-ctrl.js"></script>
 </body>
 
