--- a/src/main/resources/static/admin/phu/thuonghieu/_table.html
+++ b/src/main/resources/static/admin/phu/thuonghieu/_table.html
@@ -23,6 +23,7 @@
                         <button ng-click="edit(item)" class="btn btn-icon">
                             <i class="fa fa-xs fa-pen"></i>
                         </button>
+                        <button ng-click="delete(item)" class="btn btn-danger">
                             <i class="fa fa-xs fa-times"></i>
                         </button>
                     </div>
