--- a/src/main/resources/static/admin/phu/magiamgia/_table.html
+++ b/src/main/resources/static/admin/phu/magiamgia/_table.html
@@ -4,7 +4,7 @@
             <thead>
             <tr>
                 <th>STT</th>
-                <th>Id</th>
+                <th hidden>Id</th>
                 <th>Tên giảm giá</th>
                 <th>Mã giảm giá</th>
                 <th>Sự kiện</th>
@@ -21,7 +21,7 @@
             <tbody>
             <tr ng-repeat="item in items">
                 <td class="align-center">{{$index+1}}</td>
-                <td class="align-center">{{item.id}}</td>
+                <td hidden class="align-center">{{item.id}}</td>
                 <td class="align-center">{{item.ten}}</td>
                 <td class="align-center">{{item.ma}}</td>
                 <td class="align-center">{{item.sk}}</td>
