--- a/src/main/resources/static/admin/phu/diachi/index.html
+++ b/src/main/resources/static/admin/phu/diachi/index.html
@@ -32,6 +32,9 @@
             <div class="tab-pane fade show active" id="list" role="tabpanel">
                 <div ng-include="'/admin/phu/diachi/_table.html'"></div>
             </div>
+<!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
+<!--                <div ng-include="'/admin/phu/diachi/view.html'"></div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
