--- a/src/main/resources/static/admin/phu/thuonghieu/index.html
+++ b/src/main/resources/static/admin/phu/thuonghieu/index.html
@@ -15,20 +15,23 @@
                 </div>
             </div>
         </div>
-        <nav>
-            <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"
-                   role="tab" aria-selected="false">EDITION</a>
-                <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"
-                   role="tab" aria-selected="true">LISTS</a>
-            </div>
-        </nav>
+<!--        <nav>-->
+<!--            <div class="nav nav-tabs" id="nav-tab" role="tablist">-->
+<!--                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"-->
+<!--                   role="tab" aria-selected="false">EDITION</a>-->
+<!--                <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"-->
+<!--                   role="tab" aria-selected="true">LISTS</a>-->
+<!--            </div>-->
+<!--        </nav>-->
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade" id="edit" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_form.html'"></div>
-            </div>
+<!--            <div class="tab-pane fade" id="edit" role="tabpanel">-->
+<!--                <div ng-include="'/admin/phu/thuonghieu/_form.html'"></div>-->
+<!--            </div>-->
+<!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
+<!--                <div ng-include="'/admin/phu/thuonghieu/_table.html'"></div>-->
+<!--            </div>-->
             <div class="tab-pane fade show active" id="list" role="tabpanel">
-                <div ng-include="'/admin/phu/thuonghieu/_table.html'"></div>
+                <div ng-include="'/admin/phu/thuonghieu/view.html'"></div>
             </div>
         </div>
     </div>
