--- a/src/main/resources/static/admin/sanpham/index.html
+++ b/src/main/resources/static/admin/sanpham/index.html
@@ -30,6 +30,9 @@
             <div class="tab-pane fade show active" id="list" role="tabpanel">
                 <div ng-include="'/admin/sanpham/_table.html'"></div>
             </div>
+<!--            <div class="tab-pane fade show active" id="list" role="tabpanel">-->
+<!--                <div ng-include="'/admin/sanpham/view.html'"></div>-->
+<!--            </div>-->
         </div>
     </div>
 </div>
