Newest project note: import sql first

--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -18,28 +18,29 @@
                         <span>Dashboard</span>
                     </a>
                 </li>
-                <li>
-                    <a href="#!product" class="waves-effect">
-                        <i class="dripicons-to-do"></i>
-                        <span>Products</span>
-                    </a>
-                </li>
+
                 <li>
                     <a href="#!account" class="waves-effect">
                         <i class="dripicons-to-do"></i>
-                        <span>Accounts</span>
+                        <span>Tài Khoản</span>
                     </a>
                 </li>
                 <li>
                     <a href="#!authorize" class="waves-effect">
                         <i class="dripicons-to-do"></i>
-                        <span>Authorities</span>
+                        <span>Phân Quyền</span>
                     </a>
                 </li>
                 <li>
                     <a href="#!order" class="waves-effect">
                         <i class="dripicons-to-do"></i>
-                        <span>Order</span>
+                        <span>Đơn hàng</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#!sanpham" class="waves-effect">
+                        <i class="dripicons-to-do"></i>
+                        <span>Sản phẩm</span>
                     </a>
                 </li>
 
@@ -112,12 +113,7 @@
                         </a>
                     </li>
                     <hr>
-                    <li>
-                        <a href="#!sanpham" class="waves-effect">
-                            <i class="dripicons-to-do"></i>
-                            <span>Sản phẩm</span>
-                        </a>
-                    </li>
+
                 </ul>
             </div>
         </div>
