--- a/src/main/resources/static/admin/order/_table.html
+++ b/src/main/resources/static/admin/order/_table.html
@@ -1,31 +1,45 @@
 <div class="row mx-0 bg-white" ng-if="items">
     <div class="col-12 py-3">
-        <table id="datatable-buttons" class="table table-collapse table-bordered dt-responsive">
+        <table id="datatable-buttons1" class="table table-collapse table-bordered dt-responsive" >
             <thead>
             <tr>
                 <th>Id</th>
-                <th>Chờ lấy hàng</th>
-                <th>Đang giao hàng</th>
-                <th>Đã giao hàng</th>
-                <th>Đã hủy</th>
-                <th>#-#</th>
+                <th>Khách hàng</th>
+                <th>Địa chỉ</th>
+                <th>Ngày đặt hàng</th>
+                <th>Mã giảm giá</th>
+                <th>Phí giao hàng</th>
+                <th>Tổng tiền</th>
+                <th>Chi tiết</th>
+                <th>#</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat="item in items">
-<!--                <td class="align-center">{{item.id}}</td>-->
-<!--                <td class="align-center w-25">{{item.name}}</td>-->
-<!--                <td class="align-center">$ {{item.price | number:2}}</td>-->
-<!--                <td class="align-center">{{item.createDate | date:'dd/MM/yyyy'}}</td>-->
-<!--                <td class="align-center">{{item.image}}</td>-->
-<!--                <td class="align-center">{{item.category.name}}</td>-->
-<!--                <td class="align-center">{{item.available?'Yes':'No'}}</td>-->
+                <td class="align-center">{{item.id}}</td>
+                <td class="align-center">{{item.account.username}}</td>
+                <td class="align-center">{{item.tinh}},{{item.huyen}},{{item.xa}},{{item.dcChiTiet}}</td>
+                <td class="align-center">{{item.ngayDatHang}}</td>
+                <td class="align-center">
+                    {{item.maGiamGia ? item.maGiamGia : 'Không có'}}
+                </td>
+
+                <td class="align-center">
+                    <input type="text" ng-model="item.phiGiaoHang" class="form-control" />
+                </td>
+                <td class="align-center">{{item.tongTien}}</td>
+                <td class="align-center">
+                    <a href="/order/detail/{{item.id}}" class="btn btn-sm btn-default border-0"
+                       title="View your Order Details">
+                        <i class="fa fa-eye"></i>
+                    </a>
+                </td>
                 <td class="align-center">
                     <div class="btn-group btn-group-xs">
-                        <button ng-click="edit(item)" class="btn btn-icon">
+                        <button ng-click="xacNhan(item)" class="btn btn-icon">
                             <i class="fa fa-xs fa-pen"></i>
                         </button>
-                        <button ng-click="delete(item)" class="btn btn-danger">
+                        <button ng-click="tuChoi(item)" class="btn btn-danger">
                             <i class="fa fa-xs fa-times"></i>
                         </button>
                     </div>
