--- a/src/main/resources/static/admin/order/index.html
+++ b/src/main/resources/static/admin/order/index.html
@@ -17,19 +17,25 @@
         </div>
         <nav>
             <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#edit" type="button"
-                   role="tab" aria-selected="false">DETAIL</a>
                 <a href="javascript:(0);" class="nav-link active" data-toggle="tab" data-target="#list" type="button"
-                   role="tab" aria-selected="true">LISTS</a>
+                   role="tab" aria-selected="true" ng-click="initialize(0)">Chờ xác nhận</a>
+                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list1" type="button"
+                   role="tab" aria-selected="false" ng-click="initialize(1)">Đã xác nhận</a>
+                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list2" type="button"
+                   role="tab" aria-selected="false" ng-click="initialize(2)">Đã hủy</a>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
-            <div class="tab-pane fade" id="edit" role="tabpanel">
-                <div ng-include="'/admin/order/_form.html'"></div>
-            </div>
             <div class="tab-pane fade show active" id="list" role="tabpanel">
-                <div ng-include="'/admin/order/_table.html'"></div>
+                <div ng-include="'/admin/order/_table.html'" ></div>
+            </div>
+            <div class="tab-pane fade" id="list1" role="tabpanel">
+                <div ng-include="'/admin/order/_table1.html'" ></div>
+            </div>
+            <div class="tab-pane fade" id="list2" role="tabpanel">
+                <div ng-include="'/admin/order/_table2.html'" ></div>
             </div>
         </div>
+
     </div>
 </div>
