--- a/src/main/resources/static/admin/product/_table.html
+++ b/src/main/resources/static/admin/product/_table.html
@@ -4,8 +4,8 @@
 			<thead>
 				<tr>
 					<th>Id</th>
-					<th>Name</th>
-					<th>Price</th>
+					<th>Tên</th>
+					<th>G</th>
 					<th>Create Date</th>
 					<th>Image</th>
 					<th>Category</th>
