--- a/src/main/resources/static/admin/order/index.html
+++ b/src/main/resources/static/admin/order/index.html
@@ -21,8 +21,13 @@
                    role="tab" aria-selected="true" ng-click="initialize(0)">Chờ xác nhận</a>
                 <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list1" type="button"
                    role="tab" aria-selected="false" ng-click="initialize(1)">Đã xác nhận</a>
+                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list3" type="button"
+                   role="tab" aria-selected="false" ng-click="initialize(3)">Đang giao hàng</a>
+                <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list4" type="button"
+                   role="tab" aria-selected="false" ng-click="initialize(4)">Hoàn thành</a>
                 <a href="javascript:(0);" class="nav-link" data-toggle="tab" data-target="#list2" type="button"
                    role="tab" aria-selected="false" ng-click="initialize(2)">Đã hủy</a>
+
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -35,6 +40,14 @@
             <div class="tab-pane fade" id="list2" role="tabpanel">
                 <div ng-include="'/admin/order/_table2.html'" ></div>
             </div>
+            <div class="tab-pane fade" id="list3" role="tabpanel">
+                <div ng-include="'/admin/order/_table3.html'" ></div>
+            </div>
+            <div class="tab-pane fade" id="list4" role="tabpanel">
+                <div ng-include="'/admin/order/_table4.html'" ></div>
+            </div>
+
+
         </div>
 
     </div>
