--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -30,6 +30,17 @@
             </footer>
         </div>
     </div>
+    <!-- Include AngularJS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
+
+    <!-- Include Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <!-- Include chartjs-plugin-zoom -->
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom"></script>
+    <!-- Include XLSX -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.5/xlsx.full.min.js"></script>
+
+
     <script src="/assetss/js/jquery.min.js"></script>
     <script src="/assetss/js/popper.min.js"></script>
     <script src="/assetss/js/bootstrap.min.js"></script>
@@ -64,6 +75,24 @@
     <script src="/assetss/ctrl/ctrlPhu/diachi-ctrl.js"></script>
     <script src="/assetss/ctrl/ctrlPhu/magiamgia-ctrl.js"></script>
     <script src="/assetss/ctrl/sanpham-ctrl.js"></script>
+    <!-- Thêm thư viện Chart.js -->
+
+    <!-- Thêm thư viện Moment.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+    <!-- Thêm thư viện angular-chart.js -->
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 </body>
