thống kê sản phẩm

--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -5,7 +5,7 @@
     <div class="topbar-left">
         <div class="text-center bg-logo">
             <a href="/" class="logo">
-                <p style="font-weight: bold; font-size: larger;">DuyStore</p>
+                <p style="font-weight: bold; font-size: larger;">GOTD</p>
             </a>
         </div>
     </div>
