CAP NHAT DB TRUOC KHI CHAY

--- a/src/main/resources/static/admin/index.html
+++ b/src/main/resources/static/admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>DSTORE - Admin Dashboard</title>
+    <title>GOTD - Admin Dashboard</title>
     <link rel="shortcut icon" href="/assetss/img/favicon.ico">
     <link rel="stylesheet" type="text/css" href="/assetss/css/style.css">
 </head>
