--- a/src/main/resources/static/admin/_sidebar.html
+++ b/src/main/resources/static/admin/_sidebar.html
@@ -43,6 +43,12 @@
                         <span>Sản phẩm</span>
                     </a>
                 </li>
+                <li>
+                    <a href="#!doanhthu" class="waves-effect">
+                        <i class="dripicons-to-do"></i>
+                        <span>Doanh thu</span>
+                    </a>
+                </li>
 
             </ul>
             <div class="dropdown">
